// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Pension Status component should render active status message 1`] = `
<div>
  <div
    class="flex items-baseline gap-4"
    data-testid="pension-status"
  >
    <div
      class="rounded-full w-[12px] h-[12px] bg-green-700"
      data-testid="pension-status-icon"
    />
    <span
      class=""
    >
      data/status.active
    </span>
  </div>
</div>
`;

exports[`Pension Status component should render active tooltip for details 1`] = `
<div>
  <div
    class="flex gap-7 px-5 items-center border-2 border-slate-400 rounded-bl-2xl text-lg md:text-xl font-bold mb-6 py-3"
    data-testid="pension-status"
  >
    <div
      class="rounded-full bg-green-700 w-[18px] h-[18px]"
      data-testid="pension-status-icon"
    />
    <span
      class="flex items-center"
    >
      data/status.active
      <span
        class="ml-5"
      >
        tooltips.status-active
      </span>
    </span>
  </div>
</div>
`;

exports[`Pension Status component should render classes for details 1`] = `
<div>
  <div
    class="flex gap-7 px-5 items-center border-2 border-slate-400 rounded-bl-2xl text-lg md:text-xl font-bold mb-6 py-3"
    data-testid="pension-status"
  >
    <div
      class="rounded-full bg-green-700 w-[18px] h-[18px]"
      data-testid="pension-status-icon"
    />
    <span
      class="flex items-center"
    >
      data/status.active
      <span
        class="ml-5"
      >
        tooltips.status-active
      </span>
    </span>
  </div>
</div>
`;

exports[`Pension Status component should render inactive status message 1`] = `
<div>
  <div
    class="flex items-baseline gap-4"
    data-testid="pension-status"
  >
    <div
      class="rounded-full w-[12px] h-[12px] bg-gray-650"
      data-testid="pension-status-icon"
    />
    <span
      class=""
    >
      data/status.inactive
    </span>
  </div>
</div>
`;

exports[`Pension Status component should render inactive tooltip for details 1`] = `
<div>
  <div
    class="flex gap-7 px-5 items-center border-2 border-slate-400 rounded-bl-2xl text-lg md:text-xl font-bold mb-6 py-3"
    data-testid="pension-status"
  >
    <div
      class="rounded-full bg-gray-650 w-[18px] h-[18px]"
      data-testid="pension-status-icon"
    />
    <span
      class="flex items-center"
    >
      data/status.inactive
      <span
        class="ml-5"
      >
        tooltips.status-inactive
      </span>
    </span>
  </div>
</div>
`;
